--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,5 +1,6 @@
 files:
-  - source: /fofoler/
-    translation: /%two_letters_code%
-  - source: '*'
-    translation: '%two_letters_code%_%original_file_name%'
+  - source: /*.csv
+    translation: '%original_file_name%'
+    multilingual_spreadsheet: 1
+    first_line_contains_header: 1
+    scheme: 'identifier,context,source_phrase,es-ES,fr,max_length'
